tests/NormalTests/paczka1/fuzzy1/68084083.err
Error in line 2: S867 S116 25,1
Error in line 21: oPd9doYbj S387 69,4
Error in line 25: oPd9doYbj S116 76,1
Error in line 35: Ouc7Ov A299 48,9
Error in line 34: oPd9doYbj S867 55,8
